--- a/templates/lista.html
+++ b/templates/lista.html
@@ -1,23 +1,22 @@
-{% extends "templates.html" %}
+{% extends "template.html" %}
 {% block conteudo %}
+        <table class="table table-striped table-responsive table-bordered">
+            <thead class="thead-default">
+                <tr>
+                    <th>Nome</th>
+                    <th>Categoria</th>
+                    <th>Console</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for jogo in jogos %}
+                <tr>
+                    <td>{{ jogo.nome }}</td>
+                    <td>{{ jogo.categoria }}</td>
+                    <td>{{ jogo.console }}</td>
+                </tr>
+                {% endfor %}
 
-<table class="table table-striped table-responsive table-bordered">
-    <thead class="thead-default">
-        <tr>
-            <th>Nome</th>
-            <th>Categoria</th>
-            <th>Console</th>
-        </tr>
-    </thead>
-    <tbody>
-        {% for jogo in jogos %}
-        <tr>
-            <td>{{ jogo.nome }}</td>
-            <td>{{ jogo.categoria }}</td>
-            <td>{{ jogo.console }}</td>
-        </tr>
-        {% endfor %}
-
-    </tbody>
-</table>
+            </tbody>
+        </table>
 {% endblock %}
